styles/globals.css
/* ... */
.about-container {
  padding: 6px 18px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%
}

.about-container h1 {
  text-align: center;
  text-decoration: underline wavy red;
  text-transform: uppercase;
  padding: 10px;
  font-family: "ITC Avant Garde Gothic LT Bold";
}

.about-container h2 {
  text-align: center;
  color: red;
  padding: 40px;
  font-family: "ITC Avant Garde Gothic LT Bold";
}

.about-container h3 {
  text-align: center;
  padding: 20px;
}

.about-container h3:hover {
  color: red;
  transform: scale(1.1,1.1);
}

.about-container p{
  padding: 20px
}

.about-content {
  width: 50%
}

.twitter-about {
  color: red;
  font-weight: bold;
}

.twitter-about:hover{
  color: #1DA1F2
}

@media only screen and (max-width: 600px) {
  .about-content {
    width: 100%;
  }
}

.nft-container {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-evenly;
  border: black 2px dashed;
  margin-top: 20px;
}
.nft-card {
  padding-top: 6px;
  padding-left: 6px;
  padding-right: 6px;
  padding-bottom: 6px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
}
.nft-card:hover{
  cursor: pointer;
  transform: scale(1.05, 1.05);
  transition: transform 0.5s ease;
}
.nft-name {
  background-color: black;
  color: white;
  width: 100%;
  text-transform: uppercase;
  font-style: italic;

}

.marquee-text{
  font-size: 29px;
  font-weight: 600;
  margin: 60px 0px;
  color: #f02d34;
}
.marquee {
  position: relative;
  height: 500px;
  width: 100%;
  overflow-x: hidden;
}

.track {
  position: absolute;
  white-space: nowrap;
  will-change: transform;
  animation: marquee 15s linear infinite;
  width: 180%;
}
.track:hover {
  animation-play-state: paused;
}
@keyframes marquee {
  from { transform: translateX(0); }
  to { transform: translateX(-50%); }
}

 span.text-red {
    -webkit-text-stroke: 1px #f02d34;
    margin-left: 6px;
}
.logo {
  color: black;
  font-size: 18px;
}

.logo:hover{
  color: red;
  font-size: 18px;
}
.footer-home-container{
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.footer-space {
  white-space: pre-wrap;
}

.footer-home:hover{
  color: white;
  cursor: pointer;
}

.wallet-info{
  color: black;
  font-size: 18px;
  white-space: pre-wrap;
}
.cart-icon{
  font-size: 25px;
  color: gray;
  cursor: pointer;
  position: relative;
  transition: transform .4s ease;
  border: none;
  background-color: transparent;
}
.cart-icon:hover{
  transform: scale(1.1,1.1);
}
.cart-item-qty{
  position: absolute;
  right: -8px;
  font-size: 12px;
  color: #eee;
  background-color: #f02d34;
  width: 18px;
  height: 18px;
  border-radius: 50%;
  text-align: center;
  font-weight: 600;
  font-family: Arial, Helvetica system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;

}

.home-button{
  width: 100%;
  /* margin: 6px 18px; */
}

.home-button h2{
  text-align: center;
  /* padding: 0px 10px; */
  color: black;
}

.home-button h2:hover {
  color: red;
}
.products-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  gap: 15px;
  margin-top: 20px;
  width: 100%;
}

/* Limit to 4 products per row on desktop */
@media screen and (min-width: 1024px) {
  .products-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: center;
  }

  .products-container > * {
    flex: 0 0 calc(25% - 11.25px);
    max-width: calc(25% - 11.25px);
    min-width: 310px; /* Ensure product cards can accommodate small-images-container */
  }
}
.products-collection-container{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-bottom: 60px;

}
.products-collection-container h2{
  text-align: center;
  text-decoration: underline wavy red;
  text-transform: uppercase;
  padding: 10px;
  font-family: "ITC Avant Garde Gothic LT Bold";

}

.product-card{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
 cursor: pointer;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
  max-width: 350px;
}

.product-card:hover .product-image{
  transform: scale(1.05,1.05)
}

.product-image{
  border-radius: 10px;
  height: 250px;
  width: 250px;
  object-fit: cover;
 /* background-color: #ebebeb; */
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}

.product-name{
  margin-top: 6px;
  padding: 5px;
  font-weight: 500;
  text-align: center;
  background-color: black;
  color: white;
  width: 100%;
  text-transform: uppercase;
  /* border-top-left-radius: 10px;
  border-top-right-radius: 10px; */
}
.product-price{
  font-weight: 800;
  padding: 5px;
  margin-top: 6px;
  /* background-color: red; */
  border: 2px black solid;
  color: red;
  width: 100%;
  text-align: center;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;

}

.header-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: black;
  color: white;
  position: relative;
  /* height: 200px; */
  width: 100%;
  border-radius: 10px;
}

.header-container p {
  padding-bottom: 18px
}
.header-container-internal {
  width: 100%;
  padding: 100px 40px;
}

.header-section-title {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding-top: 18px;
  padding-bottom: 18px;
}
.header-title-box{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-end;
  padding: 20px;
  border: white 10px solid;
  border-radius: 50%;
}

.header-title-box h1 {
  font-family: "ITC Avant Garde Gothic LT Bold";

}
.title-underline {
  /* text-decoration: underline wavy red; */
}
/* ... */

